--- a/requirements.txt
+++ b/requirements.txt
@@ -7,5 +7,5 @@ langchain-google-genai==2.0.10
 langchain-pinecone==0.2.8
 langchain-community==0.3.26
 langchain-text-splitters==0.3.8
-pinecone-client==6.0.0
+pinecone==6.0.0
 google-generativeai==0.8.5
